# tool-moea-gcis

./: .gitignore  README.md  main.py  pyproject.toml
data/cod/: 2_division_code.json
data/cod/child_code/: all_child_code.json  raw_child_code_A.json  raw_child_code_B.json  raw_child_code_C.json  raw_child_code_D.json  raw_child_code_E.json  raw_child_code_F.json  raw_child_code_G.json  raw_child_code_H.json  raw_child_code_I.json  raw_child_code_J.json  raw_child_code_Z.json
data/gcis/: announcements.json
docs/: moea-gcis-spec.md
src/gov_data_fetcher/: main.py
src/gov_data_fetcher/core/: utility.py
src/gov_data_fetcher/scrapers/: gcis.py
src/moea_gcis/scrapers/: update_cod_data.py
